k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k3-waste-management
  labels:
    name: k3-waste-management
    app: k3-app
